<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ai-republic</groupId>
	<artifactId>configuration-parent</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<encoding>UTF-8</encoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<annotations.version>1.3.4</annotations.version>
		<cdi.version>2.0.1</cdi.version>
		<inject.version>2.6.0</inject.version>
		<junit.version>4.11</junit.version>
		<mockito.version>1.9.5</mockito.version>
	</properties>

	<modules>
		<module>configuration-api</module>
		<module>configuration-mongo</module>
		<module>configuration-solr</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>com.ai-republic</groupId>
			<artifactId>logging-java</artifactId>
			<version>1.0.0</version>
		</dependency>
		
		<!-- CDI environment -->
		<dependency>
			<groupId>org.glassfish.hk2.external</groupId>
			<artifactId>jakarta.inject</artifactId>
			<version>${inject.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.enterprise</groupId>
			<artifactId>jakarta.enterprise.cdi-api</artifactId>
			<version>${cdi.version}</version>
		</dependency>

		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>${annotations.version}</version>
		</dependency>


		<!-- Test frameworks -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>